2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Removed some
	  debug code.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Added a property
	  to determine, if a method resove result matches exactly one
	  of the found methods.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Added LINQ
	  context.

2010-05-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/FileService.cs: FilePath should be
	  serializable.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Resolve results
	  can now contain errors.

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs:
	* MonoDevelop.Projects/DotNetAssemblyProject.cs:
	* MonoDevelop.Projects/ProjectCreateInformation.cs: Added new
	  GetDefaultTargetPlatform virtual to DotNetProject. It is
	  overriden in DotNetAssemblyProject to set the default
	  configuration for exes (x86).

2010-05-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: Added
	  null check for 'Bug 605005 - Exception viewing asax files'.


2010-05-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Remove
	  SupportedClrVersions, as it's been superseded by
	  SupportsFramework.

2010-05-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/ProjectFile.cs: Expose
	  DependentChildren as an IList not an IEnumerable.

	* MonoDevelop.Projects/DotNetAssemblyProject.cs: Improve
	  comment.

2010-05-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Use
	  FilePath to index the file database dictionary.

	* MonoDevelop.Core.Assemblies/TargetRuntime.cs:
	  ExecuteAssembly sets env vars, so UseShellExecute must be
	  false.
